--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,11 @@
     <dependencies>
 
 <dependency>
-  <groupId>com.symphony.mobile</groupId>
-  <artifactId>symphony-client</artifactId>
-  <version>1.0-SNAPSHOT</version>
+    <groupId>org.symphonyoss</groupId>
+    <artifactId>symphony-client</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <scope>system</scope>
+    <systemPath>${project.basedir}/symphony-client-1.0-SNAPSHOT-jar-with-dependencies.jar</systemPath>
 </dependency>
 
     </dependencies>
