--- a/pom.xml
+++ b/pom.xml
@@ -43,16 +43,21 @@
     <version>1.0-SNAPSHOT</version>
     <name>Symphony Eliza Bot</name>
 
+    <repositories>
+      <repository>
+        <id>ossrh</id>
+        <name>OSSRH Public Group</name>
+        <url>https://oss.sonatype.org/content/groups/public</url>
+      </repository>
+    </repositories>
+
+
     <dependencies>
-
-<dependency>
-    <groupId>org.symphonyoss</groupId>
-    <artifactId>symphony-client</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <scope>system</scope>
-    <systemPath>${project.basedir}/symphony-client-1.0-SNAPSHOT-jar-with-dependencies.jar</systemPath>
-</dependency>
-
+        <dependency>
+            <groupId>org.symphonyoss</groupId>
+            <artifactId>symphony-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
