--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <parent>
       <groupId>org.symphonyoss</groupId>
       <artifactId>symphonyoss</artifactId>
-      <version>1-SNAPSHOT</version>
+      <version>2</version>
     </parent>
 
     <licenses>
