--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,24 @@
     <artifactId>symphony-eliza-bot</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Symphony Eliza Bot</name>
+    <description>Symphony Eliza Bot</description>
+    <url>https://github.com/kinkoi/eliza</url>
 
+     <developers>
+      <developer>
+          <id>maoo</id>
+          <name>Kinkoi Lo</name>
+          <email>kinkoi.lo@gmail.com</email>
+          <url>http://github.com/kinkoi</url>
+          <organization>Symphony Communication Services, LLC</organization>
+          <organizationUrl>http://symphony.com</organizationUrl>
+          <timezone>+8</timezone>
+          <roles>
+              <role>Developer</role>
+          </roles>
+      </developer>
+    </developers>
+	
     <repositories>
       <repository>
         <id>ossrh</id>
