Use the right version of symphony client

--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.symphonyoss</groupId>
+            <groupId>org.symphonyoss.symphony</groupId>
             <artifactId>symphony-client</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.9.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
